# flipbook

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
dependencies/: CMakeLists.txt
dependencies/nfd/: CMakeLists.txt
examples/: Phone.pxrt  blackhole.pxrt  character_shoot.pxrt  ghost.pxrt
src/: CMakeLists.txt  Canvas.cpp  Canvas.hpp  Events.cpp  FileUtils.cpp  FileUtils.hpp  Gui.cpp  Gui.hpp  LuaEmbed.cpp  LuaEmbed.h  States.cpp  States.hpp  main.cpp  misc.cpp  misc.h
src/libs/: nfd.lib
